Update build files